--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
     
   servlet:
     multipart:
+      file-size-threshold: 1MB
       max-file-size: 100MB
       max-request-size: 100MB
       
