--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,3 +38,11 @@ spring:
           naver:
             client-id: gxPiqw42Ue3RfXQjxDzC
             client-secret: Uh4x6VI3sh
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: dxb0325@gmail.com
+    password: majin12!@
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
