--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,11 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		
+		 <dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+        </dependency>
+		
 		<!-- security -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
