--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 
 	<dependencies>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.4</version>
+		</dependency>
 
 		<!-- 파일업로드 부분 -->
 		<dependency>
@@ -130,6 +135,14 @@
 			<artifactId>deeplearning4j-nlp</artifactId>
 			<version>1.0.0-beta7</version>
 		</dependency>
+
+		<!-- <dependency> <groupId>org.deeplearning4j</groupId> <artifactId>deeplearning4j-cuda-10.1</artifactId> 
+			<version>1.0.0-beta7</version> </dependency> <dependency> <groupId>org.bytedeco</groupId> 
+			<artifactId>cuda-platform-redist</artifactId> <version>10.1-7.6-1.5.2</version> 
+			</dependency> <dependency> <groupId>org.nd4j</groupId> <artifactId>nd4j-cuda-10.1</artifactId> 
+			<version>1.0.0-beta7</version> </dependency> <dependency> <groupId>org.bytedeco</groupId> 
+			<artifactId>javacpp</artifactId> <version>1.5.2</version> </dependency> -->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
